# litert-lm-native

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.json
.github/workflows/: auto_upstream_release.yml  native_release.yml  validate.yml
docs/: current_upstream.md  platform_strategy.md
include/: litert_lm_c_api.h
native/bridge/: BUILD.bazel  litert_lm_bridge.c
native/stream_proxy/: stream_proxy.c
src/: litert_lm_c_api.cc
tools/: build_stream_proxy.py  build_upstream_runtime.py  download_utils.py  fetch_upstream.py  litert_lm_symbols.py  package_apple_xcframeworks.py  package_ios_runtime.py  package_macos_runtime.py  package_official_release_assets.py  package_release.py  package_upstream_prebuilts.py  runtime_dependency_utils.py  test_package_ios_runtime.py  test_package_macos_runtime.py  test_runtime_dependency_utils.py  validate_artifacts.py  validate_release_manifest.py  validate_runtime_artifacts.py  validate_runtime_dependencies.py
web/: package.json
web/src/: index.js
